--- a/MonTrash_OneForAll/src/montrash_oneforall/view/formPengguna.form
+++ b/MonTrash_OneForAll/src/montrash_oneforall/view/formPengguna.form
@@ -460,8 +460,9 @@
                     <Component class="javax.swing.JTable" name="jtHistori">
                       <Properties>
                         <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                          <Table columnCount="4" rowCount="0">
+                          <Table columnCount="5" rowCount="0">
                             <Column editable="false" title="No" type="java.lang.Object"/>
+                            <Column editable="false" title="Id Transaksi" type="java.lang.Object"/>
                             <Column editable="false" title="Tanggal" type="java.lang.Object"/>
                             <Column editable="false" title="Jumlah Bayar" type="java.lang.Object"/>
                             <Column editable="false" title="Status" type="java.lang.Object"/>
@@ -471,6 +472,11 @@
                         <Property name="autoscrolls" type="boolean" value="false"/>
                         <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                           <TableColumnModel selectionModel="0">
+                            <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
+                              <Title/>
+                              <Editor/>
+                              <Renderer/>
+                            </Column>
                             <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                               <Title/>
                               <Editor/>
@@ -508,7 +514,7 @@
                 </Container>
                 <Component class="javax.swing.JLabel" name="jLabel5">
                   <Properties>
-                    <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;h3&gt;Histori Pembayaran Bulanan&lt;/h3&gt;&lt;/html&gt;"/>
+                    <Property name="text" type="java.lang.String" value="&lt;html&gt;&lt;h3&gt;Histori Pembayaran&lt;/h3&gt;&lt;/html&gt;"/>
                   </Properties>
                 </Component>
                 <Component class="javax.swing.JButton" name="btExportToPDF">
