--- a/MonTrash_OneForAll/src/montrash_oneforall/view/formAdmin.form
+++ b/MonTrash_OneForAll/src/montrash_oneforall/view/formAdmin.form
@@ -960,6 +960,9 @@
                   <Properties>
                     <Property name="text" type="java.lang.String" value="Jadikan PDF"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btExportToPDFActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JLabel" name="jLabel3">
                   <Properties>
